Changes in 1.7.1p2
============================================================
 - Fixed bug that caused return to answer page after answering a survey
 - Fixed bug where having a previouly calculated unique appointment field would cause a crash
 - Fixed bug where recalculating a track would overwrite all inserted rounds
 
Changes in 1.7.1p1
============================================================
 - Surveys not active in a source can no longer be activated
 - Track field values are deleted when their definition is deleted
 - UnionModel change tracking bug prevented correct change counts
 - Translation and display issues
 
 
Important changes from 1.7.0 => 1.7.1
============================================================
ABOUT THE UPGRADE
    Check the upgrade compatibility report for any possible code issues!!
    Ignore any messages that a "Column does not exist in table" during the upgrade
INTERFACE EXTENSIONS
    User with the right right can select those respondents either with or without a track in the respondent screen
    Respondents, tracks and tokens can now be undeleted - with the admin level user right
    Manual or automatic token recalculation is now determined through an input element instead of through 'magic'
    Manual or automatic track end date recalculation is now determined through an input element instead of through 'magic'
    Support of the use of respondent relations is now included but not yet part of the default interface
SECURITY
    GemsTracker is now auditable, manageable through Setup => Log Setup
    Activity reports are at several locations:
        Respondent => Show => Other Activity Log
        Setup => Access => Staff => Show => Activity overview
        Setup => Log
        Your account => Activity overview
    Csrf protection can now be disabled at the project level (not recommended)
EXPORT
    CSV format export supported
    Trackinformation can be added to the export